objects/VlocityDemoDX_Authentication__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VlocityDemoDX Authentication</label>
    <pluralLabel>VlocityDemoDX Authentications</pluralLabel>
</CustomObject>